--- a/style.css
+++ b/style.css
@@ -1,36 +1,96 @@
-.bg{
+.container{
+    background-color:#d9d9d9 ;
+    border: solid 2px black;               /*burasi silinecek*/
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 90%;
+    width: 28.75rem;
+    height: 44.625rem;
 }
 
-.greenbg{
+.outputScreen{
+
+}
+
+.buttonContainer{
     position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     background: green;
     width: 50vw;
     height: 50vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2%;
+
+
 }
 
-.redbox{
+.buttonContainer > div{
     background-color: red;
-    width: 15vw;
-    height: 15vw;
+    width: 10px;
+    height: 10px;
+    padding: 1.125rem;
+    text-align: center;
 }
 
-.bluebox{
-    background-color: blue;
-    width: 15vw;
-    height: 15vw;
+.button1{
+
 }
 
-.blackbox{
-    background-color: black;
-    width: 15vw;
-    height: 15vw;
+.button2{
+
+}
+
+.button3{
+
+}
+
+.button4{
+
+}
+
+.button5{
+
+}
+
+.button6{
+
+}
+
+.button7{
+
+}
+
+.button8{
+
+}
+
+.button9{
+
+}
+
+.button10{
+
+}
+
+.button11{
+
+}
+
+.button12{
+
+}
+
+.button13{
+
+}
+
+.button14{
+
+}
+
+.button15{
+
+}
+
+.button16{
+
 }
