--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+body{
+    font-family: "Varela Round", serif;
+}
+
 .bg{
     display: flex;
     align-items: center;
@@ -5,7 +11,7 @@
 }
 
 .container{
-    background-color:#d9d9d9 ;
+    background-color:#d9d9d9     ;
     display: flex;
     flex-direction: column;
     gap: 1.875rem;
@@ -13,15 +19,27 @@
     align-items: center;
     width: 28.75rem;
     height: 44.625rem;
-    border-radius: 3.375rem;
-    border: 3px solid #210A0A;
+    border-radius: .375rem;
 }
 
-.outputScreen{
+#outputScreen{
     background-color: #210A0A;
     width: 25rem;
     height: 13.875rem;
     border-radius: 1.5rem;
+    border: none;
+    text-align: right;
+    font-family: inherit;
+    font-size: 5rem;
+    cursor:default;
+    color: #D9D9D9;
+    padding-right: 20px;
+    /* paddingden dolayi genislemeyi engellemek icin: */
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    
+    /*------------------------------------------------*/
 }
 
 .buttonContainer{
@@ -36,22 +54,35 @@
 
 }
 
-.buttonContainer > div{
+.buttonContainer > button{
     background-color: #382626;
     width: 66px;
     height: 66px;
     text-align: center;
     border-radius: 1.0625rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #D9D9D9;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: inherit;
+    font-size: 1.8rem;
 }
 
-.buttonContainer > div:is(.button4, .button8, .button12, .button13, .button15, .button16) {   /*------------Operation Buttons------------*/
+
+.buttonContainer > .operation{
     background-color: #38262630;
     border-radius: .3125rem;
+    
 }
+
+/* 
+
+.buttonContainer > div:is(#button4, #button8, #button12, #button13, #button15, #button16) {
+    background-color: #38262630;
+    border-radius: .3125rem;
+} 
+
+*/
 
 .inner{
     background-color: #382626;
@@ -62,68 +93,4 @@
     align-items: center;
     border: .0313rem solid #544343;
     border-radius: .1875rem;
-}
-
-.button1{
-
-}
-
-.button2{
-
-}
-
-.button3{
-
-}
-
-.button4{
-
-}
-
-.button5{
-    background-color: red;
-}
-
-.button6{
-
-}
-
-.button7{
-
-}
-
-.button8{
-
-}
-
-.button9{
-
-}
-
-.button10{
-
-}
-
-.button11{
-
-}
-
-.button12{
-
-}
-
-.button13{
-
-}
-
-.button14{
-
-}
-
-.button15{
-
-}
-
-.button16{
-
 }
